--- a/src/assets/intro.css
+++ b/src/assets/intro.css
@@ -1,6 +1,6 @@
 h1
 {
-    color: #7FDBFF;
+    color: #04AA6D;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
 
@@ -12,8 +12,45 @@ h2
     color: #0c0d5f;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
     
 }
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.home-page {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  #date_picker
+  {
+      color: #04AA6D ;
+  }
+ 
+
 
 #container {height: 100%; width:100%; font-size: 0;}
 #left, #middle, #right {display: inline-block; *display: inline; zoom: 1; vertical-align: top; font-size: 12px;}
